Removing newer java calls